Development Portal (2016-01-29 shi)
==============================
Fixed all tables layout for better hover states
Added border lines to Print Friendly tables
Fixed Activity State section in Dash
Minor text edit in Dash 


Development Portal (2016-01-28 shi)
==============================
Added new data quality alert for no active projects
Translations added for alert
Added footnote info for Donors table about CRS agencies
Added translations for footnote info
Fixed double tab Generator bug for Firefox
Fixed layout bug for SAVi option in Generator
Edited link for news post


Development Portal (2015-11-13 shi)
==============================
Include baseline year comments in SAVi results
Fixed Print Friendly description border


Development Portal (2015-11-12 shi)
==============================
Added Result subheader to SAVi
Update CSS for themes and rgba
Plural for Results, Budgets and Transactions
Fixed hover CSS org budget column for rgba


Development Portal (2015-11-10 shi)
==============================
SAVi results CSS to include new attributes
Include result types, description, target, actual, periods
Update Print Friendly CSS
Update rgba themes CSS with new attributes
Fixed related document list CSS


Development Portal (2015-11-05 shi)
==============================
Added new footer text for publisher_countries


Development Portal (2015-11-04 shi)
==============================
Clear links for publisher tables, year total columns
Update CSS for year total columns


Development Portal (2015-10-27 shi)
==============================
Changed 'available' to 'total' for org budget column
Updated translations accordingly


Development Portal (2015-10-12 shi)
==============================
Added org files to CRS publisher tables
Fixed year range for new org file columns


Development Portal (2015-10-08 shi)
==============================
Added org file budget text
Added translations for budget columns


Development Portal (2015-09-25 shi)