@@ -1,3 +1,8 @@
+Development Portal (2016-01-30 shi)
+==============================
+Added portal link on individual Dash profiles
+
+
 Development Portal (2016-01-29 shi)
 ==============================
 Fixed all tables layout for better hover states
